melhorias na responsividade do menu

--- a/style.css
+++ b/style.css
@@ -180,6 +180,10 @@ nav .logo-container h3{
 
     nav{
         padding: 0 15px;
+        position: fixed;
+        bottom: 0;
+        top: unset;
+        width: 100%;
     }
     nav ul a{
         font-size: 12px;
