--- a/style.css
+++ b/style.css
@@ -57,6 +57,21 @@ button {
     font-size: 18px;
 }
 
+.sercondary-button{
+    background-color: var(--mgreen);
+    border: 1px solid var(--lgreen);
+    color: var(--green);
+    font-weight: bold;
+    height: 80px;
+
+    display: flex;
+    align-items: center;
+}
+
+.sercondary-button img{
+    margin-right: 15px;
+}
+
 .title-lgreen {
     color: var(--lgreen);
 }
@@ -158,7 +173,6 @@ nav .logo-container h3 {
 .about-me .img-container img {
     width: 70%;
     height: 100%;
-    object-fit: cover;
 }
 
 .about-me .img-container .line {
@@ -181,7 +195,8 @@ nav .logo-container h3 {
     padding: 0 100px;
 }
 
-.services-container {
+.services-container,
+.portfolio-container {
     display: flex;
     justify-content: space-between;
     max-width: 1200px;
@@ -199,10 +214,10 @@ nav .logo-container h3 {
     text-align: center;
     align-items: center;
     max-width: 360px;
-   
+
 }
 
-.services .services-container .card svg{
+.services .services-container .card svg {
     margin-bottom: 40px;
     background-color: var(--green);
     border-radius: 45px;
@@ -210,9 +225,118 @@ nav .logo-container h3 {
     width: 90px;
 }
 
-.card + .card{
+.card+.card {
     margin-left: 10px;
 }
+
+.portfolio {
+    padding: 0 100px;
+    text-align: center;
+    margin-bottom: 100px;
+    background: url('assets/portfolio-bg.jpg');
+    height: 800px;
+}
+
+.portfolio .portfolio-container {
+    margin-top: 130px;
+}
+
+.portfolio .portfolio-container .portfolio-card {
+    background: radial-gradient(100% 100% at 0% 0%, rgba(255, 255, 255, 0.33) 0%, rgba(255, 255, 255, 0) 100%);
+    box-shadow: 0px 4px 24px -1px rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(21px);
+    border-radius: 16px;
+    max-width: 360px;
+    border: 1px solid #ffF;
+    text-align: left;
+    padding: 50px 25px;
+
+}
+
+.portfolio .portfolio-container .portfolio-card .img-container {
+    margin: 0px 25px 50px;
+    position: relative;
+
+}
+
+.portfolio .portfolio-container .portfolio-card .img-container img {
+    width: 100%;
+    border-radius: 16px;
+}
+
+.portfolio-container .portfolio-card .img-container .line {
+    width: calc(100% + 24px);
+    height: calc(100% + 24px);
+    position: absolute;
+    top: -12px;
+    left: calc(50% - 100%/2 - 12px);
+    transform: rotate(-1.93deg);
+    border: 1px solid var(--green);
+    border-radius: 16px;
+}
+
+.portfolio .portfolio-container .portfolio-card .language-container {
+    margin-bottom: 20px;
+}
+
+.portfolio .portfolio-container .portfolio-card .language-container ul {
+    display: flex;
+    list-style: none;
+    padding: 0;
+}
+
+.portfolio .portfolio-container .portfolio-card .language-container ul li {
+    color: var(--lgreen);
+    border: 1px solid var(--lgreen);
+    border-radius: 16px;
+    padding: 3px 15px;
+
+}
+
+.portfolio-card .language-container ul li+li {
+    margin-left: 10px;
+}
+
+.portfolio-card+.portfolio-card {
+    margin-left: 10px;
+}
+
+p {
+    margin: 0;
+}
+
+.curriculum{
+    padding: 0 100px;
+    text-align: center;
+}
+
+.curriculum .container{
+    display: flex;
+    margin: 50px auto;
+    max-width: 1200px ;
+}
+
+.curriculum .container .content{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: left;
+    width: 100%;
+    align-items: center;
+
+}
+
+.curriculum .container .content .curriculum-info{
+    display: grid;
+    grid-template-columns: 150px auto;
+    grid-gap: 1rem;
+    margin-bottom: 50px;
+}
+
+
+
+
+
 
 
 
@@ -250,23 +374,42 @@ nav .logo-container h3 {
         margin: 70px 0;
     }
 
-    .services .services-container{
+    .services .services-container,
+    .portfolio .portfolio-container {
         flex-wrap: wrap;
         flex-direction: column;
         align-items: center;
     }
-    .services{
+
+    .services,
+    .portfolio {
         padding: 0;
     }
-    .card{
+
+    .card {
         height: 394px;
     }
-    
-    .card + .card{
+
+    .card+.card,
+    .portfolio-card+.portfolio-card {
         margin-left: 0;
         margin-top: 30px;
     }
 
+    .portfolio {
+        height: 100%;
+    }
+
+    .curriculum .container{
+        flex-wrap: wrap;
+    }
+
+    .curriculum .container .curriculum-img{
+        display: block;
+        margin: 0 auto 50px;
+        width: 100%;
+        max-width: 520px;
+    }
 }
 
 /* Tablet */
@@ -299,11 +442,13 @@ nav .logo-container h3 {
 /* Celular */
 @media (max-width: 480px) {
 
+    body {
+        margin-bottom: calc(var(--nav-height) + 50px);
+    }
+
     header .container {
         padding: 0 45px;
     }
-
-
 
     nav {
         padding: 0 15px;
@@ -326,8 +471,24 @@ nav .logo-container h3 {
         padding: 40px;
     }
 
-    .services .services-container{
+    .services .services-container,
+    .portfolio-container {
         padding: 0 20px;
     }
 
+    .portfolio .portfolio-container {
+        margin-top: 70px;
+    }
+
+    .portfolio {
+        margin: 100px 0 50px;
+    }
+
+    .curriculum{
+        padding: 0 20px;
+    }
+
+    .curriculum .container .content .curriculum-info{
+        padding: 0 15px;
+    }
 }
